# check-challenge

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  teste.py
app/: main.py
app/config/: security.py
app/db/: models.py  session.py
app/modules/auth/: auth_controller.py  auth_dto.py  auth_service.py
app/modules/challenge/: challenge_controller.py  challenge_dto.py  challenge_service.py
app/modules/checkins/: checkin_controller.py  checkin_service.py
app/modules/users/: user_controller.py  user_service.py
app/shared/dependecies/: auth_dependency.py  db_dependency.py
